Fixed utility icon alignment. on smaller resolution screen

--- a/css/cover.css
+++ b/css/cover.css
@@ -389,3 +389,7 @@ body {
   
   }
 }
+.currtime{
+  text-align: right;
+  padding-right: 20px;
+}
